--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
     "deploy": "node scripts/deploy.js",
-    "postinstall": "node scripts/install-other-dependencies.js",
+    "install-deps": "npm install && node scripts/install-other-dependencies.js",
     "release-major": "node scripts/release.js major",
     "release-minor": "node scripts/release.js minor",
     "release-patch": "node scripts/release.js patch",
