--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@ node_modules
 .idea
 **/*.iml
 .DS_STORE
-app/**/*.js
+src/**/*.js
 test/**/*.js
 **/*.map
-app/typings
 coverage
 dist
 npm-debug.log
