--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "steal": "^0.13.0-pre.1"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
     "cross-spawn-async": "^2.1.6",
     "del": "^2.0.2",
     "jasmine": "^2.4.1",
     "karma": "^0.13.19",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
-    "karma-mocha": "^0.2.1",
-    "karma-sinon": "^1.0.4",
-    "karma-sinon-chai": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-steal-npm": "^0.1.3",
     "minimist": "^1.2.0",
+    "phantomjs": "^1.9.19",
     "tsd": "^0.6.5",
     "typescript": "^1.7"
   },
