--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "steal": "^0.13.0-pre.1"
   },
   "devDependencies": {
+    "chokidar": "^1.4.2",
+    "connect": "^3.4.0",
+    "connect-livereload": "^0.5.4",
     "cross-spawn-async": "^2.1.6",
     "del": "^2.0.2",
+    "gaze": "^0.5.2",
     "jasmine": "^2.4.1",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
@@ -29,6 +33,8 @@
     "karma-jasmine-html-reporter": "^0.2.0",
     "karma-steal-npm": "^0.1.3",
     "minimist": "^1.2.0",
+    "serve-static": "^1.10.0",
+    "tiny-lr": "^0.2.1",
     "tsd": "^0.6.5",
     "typescript": "^1.7"
   },
@@ -45,6 +51,7 @@
     "type": ""
   },
   "scripts": {
+    "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
