--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-jasmine-html-reporter": "^0.2.0",
     "karma-steal-npm": "^0.1.3",
     "minimist": "^1.2.0",
+    "node-sass": "^3.4.2",
     "serve-static": "^1.10.0",
     "tiny-lr": "^0.2.1",
     "tsd": "^0.6.5",
@@ -53,6 +54,8 @@
   "scripts": {
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
+    "build-ts": "node scripts/build.js ts",
+    "build-sass": "node scripts/build.js sass",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
