--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "connect": "^3.4.0",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "eventemitter3": "^1.1.1",
-    "serve-static": "^1.10.0",
-    "steal": "^0.13.0-pre.1"
+    "serve-static": "^1.10.0"
   },
   "devDependencies": {
     "chokidar": "^1.4.2",
@@ -34,10 +33,13 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "^0.2.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-steal-npm": "^0.1.3",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.3",
     "preprocess": "^3.0.2",
+    "steal": "^0.14.0-pre.5",
     "steal-tools": "^0.13.2",
     "tiny-lr": "^0.2.1",
     "tsd": "^0.6.5",
