--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "phantomjs-prebuilt": "^2.1.3",
     "preprocess": "^3.0.2",
     "steal": "^0.14.0-pre.5",
-    "steal-tools": "^0.13.2",
+    "steal-tools": "^0.14.0-pre.2",
     "tiny-lr": "^0.2.1",
     "tsd": "^0.6.5",
     "typescript": "^1.7"
