--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chokidar": "^1.4.2",
     "connect-livereload": "^0.5.4",
+    "coveralls": "^2.11.4",
     "cpy": "^4.0.0",
     "cross-spawn-async": "^2.1.6",
     "del": "^2.0.2",
