upgrading to use typings from package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "name": ""
   },
   "main": "src/client/main",
+  "typings": "./typings/browser.d.ts",
   "system": {
     "npmIgnore": [
       "devDependencies",
