--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
     "serve-static": "^1.10.2"
   },
   "devDependencies": {
-    "chokidar": "^1.4.2",
-    "connect-livereload": "^0.5.4",
-    "coveralls": "^2.11.6",
-    "cpy": "^4.0.0",
-    "cross-spawn-async": "^2.1.8",
-    "del": "^2.2.0",
-    "htmlprocessor": "^0.2.0",
-    "jasmine": "^2.4.1",
-    "karma": "^0.13.19",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.7",
-    "karma-jasmine-html-reporter": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.5",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-steal-npm": "^0.1.4",
-    "minimist": "^1.2.0",
-    "node-sass": "^3.4.2",
-    "phantomjs-prebuilt": "^2.1.3",
-    "preprocess": "^3.0.2",
-    "steal": "^0.14.0-pre.6",
-    "steal-tools": "^0.14.0-pre.2",
-    "tiny-lr": "^0.2.1",
-    "typescript": "^1.8.0",
-    "typings": "^0.6.6"
+    "chokidar": "1.4.2",
+    "connect-livereload": "0.5.4",
+    "coveralls": "2.11.6",
+    "cpy": "4.0.0",
+    "cross-spawn-async": "2.1.8",
+    "del": "2.2.0",
+    "htmlprocessor": "0.2.0",
+    "jasmine": "2.4.1",
+    "karma": "0.13.19",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-coverage": "0.5.3",
+    "karma-firefox-launcher": "0.1.7",
+    "karma-jasmine": "0.3.7",
+    "karma-jasmine-html-reporter": "0.2.0",
+    "karma-mocha-reporter": "1.1.5",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-steal-npm": "0.1.4",
+    "minimist": "1.2.0",
+    "node-sass": "3.4.2",
+    "phantomjs-prebuilt": "2.1.3",
+    "preprocess": "3.0.2",
+    "steal": "0.14.0-pre.6",
+    "steal-tools": "0.14.0-pre.2",
+    "tiny-lr": "0.2.1",
+    "typescript": "1.8.0",
+    "typings": "0.6.6"
   },
   "engines": {
     "node": ">=5.0.0"
