--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "bluebird": "^3.2.1",
-    "connect": "^3.4.1",
-    "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "eventemitter3": "^1.1.1",
-    "serve-static": "^1.10.2"
+    "bluebird": "3.2.1",
+    "connect": "3.4.1",
+    "eventemitter3": "1.1.1",
+    "serve-static": "1.10.2"
   },
   "devDependencies": {
     "chokidar": "1.4.2",
