--- a/package.json
+++ b/package.json
@@ -15,38 +15,43 @@
     "npmAlgorithm": "flat"
   },
   "dependencies": {
-    "bluebird": "3.4.1",
-    "connect": "3.4.1",
-    "eventemitter3": "1.2.0",
-    "serve-static": "1.11.1"
+    "bluebird": "3.4.6",
+    "connect": "3.5.0",
+    "eventemitter3": "2.0.2",
+    "serve-static": "1.11.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "chokidar": "1.6.0",
-    "connect-livereload": "0.5.4",
-    "coveralls": "2.11.9",
+    "@types/bluebird": "^3.0.35",
+    "@types/jasmine": "^2.5.35",
+    "@types/node": "^6.0.45",
+    "@types/whatwg-fetch": "0.0.32",
+    "chokidar": "1.6.1",
+    "connect-livereload": "0.6.0",
+    "coveralls": "2.11.14",
     "cpy": "4.0.1",
-    "cross-spawn": "4.0.0",
-    "del": "2.2.1",
-    "htmlprocessor": "0.2.3",
-    "jasmine": "2.4.1",
-    "karma": "0.13.19",
-    "karma-chrome-launcher": "1.0.1",
-    "karma-coverage": "1.0.0",
+    "cross-spawn": "4.0.2",
+    "del": "2.2.2",
+    "htmlprocessor": "0.2.4",
+    "jasmine": "2.5.2",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.0",
     "karma-jasmine": "1.0.2",
-    "karma-jasmine-html-reporter": "0.2.0",
-    "karma-mocha-reporter": "2.0.4",
-    "karma-phantomjs-launcher": "1.0.1",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-steal-npm": "0.1.4",
     "minimist": "1.2.0",
-    "node-sass": "3.8.0",
-    "phantomjs-prebuilt": "2.1.7",
+    "node-sass": "3.10.1",
+    "phantomjs-prebuilt": "2.1.13",
     "preprocess": "3.1.0",
-    "steal": "0.16.22",
-    "steal-tools": "0.16.5",
-    "tiny-lr": "0.2.1",
-    "typescript": "1.8.10",
-    "typings": "1.3.1"
+    "steal": "0.16.41",
+    "steal-tools": "0.16.8",
+    "tiny-lr": "1.0.2",
+    "typescript": "2.0.3",
+    "typings": "1.4.0"
   },
   "engines": {
     "node": ">=5.0.0"
