--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "noLib": false,
     "emitDecoratorMetadata":true,
     "experimentalDecorators":true,
+    "lib": ["es5", "es6"],
+    "skipLibCheck":true,
     "noEmitOnError":true,
     "moduleResolution":"node"
   },
