--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-mocha-reporter": "2.2.0",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-steal-npm": "0.1.5",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
     "minimist": "1.2.0",
     "node-sass": "3.10.1",
     "phantomjs-prebuilt": "2.1.13",
@@ -48,8 +49,9 @@
     "steal": "0.16.41",
     "steal-tools": "0.16.8",
     "tiny-lr": "1.0.2",
+    "ts-loader": "0.9.5",
     "typescript": "2.0.3",
-    "typings": "1.4.0"
+    "webpack": "1.13.3"
   },
   "engines": {
     "node": ">=5.0.0"
