--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
   },
   "devDependencies": {
     "@types/bluebird": "3.0.35",
-    "@types/jasmine": "2.5.35",
-    "@types/node": "6.0.45",
+    "@types/jasmine": "2.5.36",
+    "@types/node": "6.0.46",
     "@types/whatwg-fetch": "0.0.32",
+    "awesome-typescript-loader": "^2.2.4",
     "chokidar": "1.6.1",
     "connect-livereload": "0.6.0",
     "coveralls": "2.11.14",
     "cpy": "4.0.1",
+    "cross-env": "^3.1.3",
     "cross-spawn": "4.0.2",
     "del": "2.2.2",
+    "html-webpack-plugin": "^2.24.0",
     "htmlprocessor": "0.2.4",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
@@ -49,9 +52,12 @@
     "steal": "0.16.41",
     "steal-tools": "0.16.8",
     "tiny-lr": "1.0.2",
-    "ts-loader": "0.9.5",
-    "typescript": "2.0.3",
-    "webpack": "1.13.3"
+    "ts-helpers": "1.1.2",
+    "ts-node": "^1.3.0",
+    "typescript": "2.0.6",
+    "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "1.8.4",
+    "webpack-dev-server": "2.1.0-beta.9"
   },
   "engines": {
     "node": ">=5.0.0"
