--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cpy": "4.0.1",
     "cross-env": "^3.1.3",
     "cross-spawn": "4.0.2",
+    "css-loader": "^0.25.0",
     "del": "2.2.2",
     "html-webpack-plugin": "^2.24.0",
     "htmlprocessor": "0.2.4",
@@ -49,8 +50,10 @@
     "node-sass": "3.10.1",
     "phantomjs-prebuilt": "2.1.13",
     "preprocess": "3.1.0",
+    "sass-loader": "^4.0.2",
     "steal": "0.16.41",
     "steal-tools": "0.16.8",
+    "style-loader": "^0.13.1",
     "tiny-lr": "1.0.2",
     "ts-helpers": "1.1.2",
     "ts-node": "^1.3.0",
