--- a/package.json
+++ b/package.json
@@ -4,16 +4,6 @@
   "author": {
     "name": ""
   },
-  "main": "src/client/main",
-  "typings": "./typings/browser.d.ts",
-  "system": {
-    "npmIgnore": [
-      "devDependencies",
-      "connect",
-      "serve-static"
-    ],
-    "npmAlgorithm": "flat"
-  },
   "dependencies": {
     "bluebird": "3.4.6",
     "express": "4.14.0",
@@ -24,12 +14,12 @@
     "@types/jasmine": "2.5.36",
     "@types/node": "6.0.46",
     "@types/whatwg-fetch": "0.0.32",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "2.2.4",
     "chokidar": "1.6.1",
     "connect-livereload": "0.6.0",
     "coveralls": "2.11.14",
     "cpy": "4.0.1",
-    "cross-env": "^3.1.3",
+    "cross-env": "3.1.3",
     "cross-spawn": "4.0.2",
     "css-loader": "^0.25.0",
     "del": "2.2.2",
@@ -50,17 +40,16 @@
     "node-sass": "3.10.1",
     "phantomjs-prebuilt": "2.1.13",
     "preprocess": "3.1.0",
-    "sass-loader": "^4.0.2",
-    "steal": "0.16.41",
-    "steal-tools": "0.16.8",
-    "style-loader": "^0.13.1",
+    "raw-loader": "0.5.1",
+    "sass-loader": "4.0.2",
+    "style-loader": "0.13.1",
     "tiny-lr": "1.0.2",
     "ts-helpers": "1.1.2",
-    "ts-node": "^1.3.0",
+    "ts-node": "1.3.0",
     "typescript": "2.0.6",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
-    "webpack-dev-server": "2.1.0-beta.9"
+    "webpack-hot-middleware": "2.13.1"
   },
   "engines": {
     "node": ">=5.0.0"
