--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@types/node": "6.0.46",
     "@types/whatwg-fetch": "0.0.32",
     "awesome-typescript-loader": "2.2.4",
-    "chokidar": "1.6.1",
-    "connect-livereload": "0.6.0",
+    "copy-webpack-plugin": "^4.0.0",
     "coveralls": "2.11.14",
     "cpy": "4.0.1",
     "cross-env": "3.1.3",
     "cross-spawn": "4.0.2",
-    "css-loader": "^0.25.0",
+    "css-loader": "0.25.0",
     "del": "2.2.2",
-    "html-webpack-plugin": "^2.24.0",
-    "htmlprocessor": "0.2.4",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "2.24.0",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
@@ -42,10 +42,8 @@
     "preprocess": "3.1.0",
     "raw-loader": "0.5.1",
     "sass-loader": "4.0.2",
+    "script-ext-html-webpack-plugin": "^1.3.2",
     "style-loader": "0.13.1",
-    "tiny-lr": "1.0.2",
-    "ts-helpers": "1.1.2",
-    "ts-node": "1.3.0",
     "typescript": "2.0.6",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
@@ -65,7 +63,7 @@
   },
   "scripts": {
     "develop": "node scripts/develop.js",
-    "build": "node scripts/build.js",
+    "build": "node $NODE_DEBUG_OPTION scripts/build.js",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
