--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "script-ext-html-webpack-plugin": "^1.3.2",
     "style-loader": "0.13.1",
     "typescript": "2.0.6",
+    "underscore-template-loader": "^0.7.3",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.1"
@@ -63,7 +64,7 @@
   },
   "scripts": {
     "develop": "node scripts/develop.js",
-    "build": "node $NODE_DEBUG_OPTION scripts/build.js",
+    "build": "node scripts/build.js",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
