--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
     "awesome-typescript-loader": "2.2.4",
     "copy-webpack-plugin": "^4.0.0",
     "coveralls": "2.11.14",
-    "cpy": "4.0.1",
-    "cross-env": "3.1.3",
     "cross-spawn": "4.0.2",
     "css-loader": "0.25.0",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "html-loader": "^0.4.4",
     "html-webpack-plugin": "2.24.0",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
@@ -39,13 +36,11 @@
     "minimist": "1.2.0",
     "node-sass": "3.10.1",
     "phantomjs-prebuilt": "2.1.13",
-    "preprocess": "3.1.0",
     "raw-loader": "0.5.1",
     "sass-loader": "4.0.2",
-    "script-ext-html-webpack-plugin": "^1.3.2",
     "style-loader": "0.13.1",
     "typescript": "2.0.6",
-    "underscore-template-loader": "^0.7.3",
+    "underscore-template-loader": "0.7.3",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.1"
