adding protractor support  --intial commit

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bluebird": "3.0.35",
     "@types/jasmine": "2.5.36",
     "@types/node": "6.0.46",
+    "@types/selenium-webdriver": "^2.53.33",
     "@types/whatwg-fetch": "0.0.32",
     "awesome-typescript-loader": "2.2.4",
     "copy-webpack-plugin": "^4.0.0",
@@ -36,9 +37,12 @@
     "minimist": "1.2.0",
     "node-sass": "3.10.1",
     "phantomjs-prebuilt": "2.1.13",
+    "protractor": "4.0.10",
+    "protractor-jasmine2-html-reporter": "0.0.6",
     "raw-loader": "0.5.1",
     "sass-loader": "4.0.2",
     "style-loader": "0.13.1",
+    "ts-node": "1.6.1",
     "typescript": "2.0.6",
     "underscore-template-loader": "0.7.3",
     "webpack": "2.1.0-beta.25",
@@ -60,6 +64,7 @@
   "scripts": {
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
+    "build-typescript": "node scripts/build.js typescript",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
@@ -71,7 +76,14 @@
     "release-patch": "node scripts/release.js patch",
     "test": "node scripts/test.js",
     "test-local-chrome": "node scripts/test.js local Chrome",
-    "test-local-firefox": "node scripts/test.js local Firefox"
+    "test-local-firefox": "node scripts/test.js local Firefox",
+    "pretest-e2e": "npm run webdriver:update -- --standalone",
+    "test-e2e:live": "npm run test-e2e -- --elementExplorer",
+    "test-e2e": "npm run protractor",
+    "webdriver-manager": "webdriver-manager",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "npm run webdriver-manager update",
+    "protractor": "protractor"
   },
   "version": "1.0.2",
   "bugs": {
