--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "noLib": false,
     "emitDecoratorMetadata":true,
     "experimentalDecorators":true,
-    "lib": ["es5", "es6"],
+    "lib": ["es5", "es6","dom","scripthost"],
     "skipLibCheck":true,
     "noEmitOnError":true,
     "moduleResolution":"node"
