--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "name": ""
   },
   "dependencies": {
-    "bluebird": "3.4.6",
+    "core-js": "2.4.1",
     "express": "4.14.0",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "@types/bluebird": "3.0.35",
+    "@types/core-js": "^0.9.34",
     "@types/jasmine": "2.5.36",
     "@types/node": "6.0.46",
     "@types/selenium-webdriver": "^2.53.33",
@@ -23,6 +23,7 @@
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "html-webpack-plugin": "2.24.0",
+    "istanbul-instrumenter-loader": "0.2.0",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
@@ -32,7 +33,8 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-mocha-reporter": "2.2.0",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-sourcemap-loader": "0.3.7",
+    "karma-remap-coverage": "0.1.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
     "minimist": "1.2.0",
     "node-sass": "3.10.1",
@@ -64,7 +66,7 @@
   "scripts": {
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
-    "build-typescript": "node scripts/build.js typescript",
+    "build-local": "node scripts/build.js local",
     "build-release": "npm run build release",
     "clean": "node scripts/clean.js",
     "coverage": "node scripts/coverage.js",
