fixing dev dependency and code coverage

--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
+    "@types/core-js": "0.9.34",
     "@types/jasmine": "2.5.36",
     "@types/node": "6.0.46",
-    "@types/selenium-webdriver": "^2.53.33",
+    "@types/selenium-webdriver": "2.53.33",
     "@types/whatwg-fetch": "0.0.32",
     "awesome-typescript-loader": "2.2.4",
-    "copy-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "4.0.0",
     "coveralls": "2.11.14",
     "cross-spawn": "5.0.0",
     "css-loader": "0.25.0",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "fs-extra": "1.0.0",
     "html-webpack-plugin": "2.24.0",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine": "2.5.2",
@@ -34,7 +35,7 @@
     "karma-mocha-reporter": "2.2.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "minimist": "1.2.0",
     "node-sass": "3.10.1",
