--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "core-js": "2.4.1",
+    "store2": "2.3.2",
     "express": "4.14.0",
     "whatwg-fetch": "1.0.0"
   },
