--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "0.25.0",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "firebase-tools": "3.1.0",
     "fs-extra": "1.0.0",
     "html-webpack-plugin": "2.24.1",
     "istanbul-instrumenter-loader": "0.2.0",
@@ -81,7 +82,8 @@
     "test": "node scripts/test.js",
     "test-local-chrome": "node scripts/test.js local Chrome",
     "test-local-firefox": "node scripts/test.js local Firefox",
-    "test-e2e": "npm run test e2e"
+    "test-e2e": "npm run test e2e",
+    "firebase":"firebase"
   },
   "version": "2.1.5",
   "bugs": {
