--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: false
 language: node_js
 node_js:
-  - "5.0.0"
-  - "5.1.0"
+  - "6.9.1"
+  - "7.0.0"
 install:
   - npm run install-deps
 before_script:
@@ -10,7 +10,6 @@ before_script:
     - sh -e /etc/init.d/xvfb start
 after_script:
   - npm run coverage
-  - if [ -n "$TRAVIS_TAG" ];
-    then npm run firebase deploy --token $FIREBASE_TOKEN;
+  - npm run firebase deploy --token $FIREBASE_TOKEN;
 git:
   depth: 10
