--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
     - sh -e /etc/init.d/xvfb start
 after_script:
   - npm run coverage
-  - npm run firebase deploy --token $FIREBASE_TOKEN;
+  - npm run firebase deploy --token "$FIREBASE_TOKEN";
 git:
   depth: 10
