--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: node_js
 node_js:
   - "6.9.1"
+  env:
+    - NODE_ENV=CI
 install:
   - npm run install-deps
 before_script:
@@ -9,6 +11,6 @@ before_script:
     - sh -e /etc/init.d/xvfb start
 after_script:
   - npm run coverage
-  - npm run firebase deploy -- --token $FIREBASE_TOKEN;
+  - npm run deploy;
 git:
   depth: 10
