testing firebase deploy 4.0

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "test": "node scripts/test.js",
     "test-local-chrome": "node scripts/test.js local Chrome",
     "test-local-firefox": "node scripts/test.js local Firefox",
-    "test-e2e": "npm run test e2e"
+    "test-e2e": "npm run test e2e",
+    "firebase":"firebase"
   },
   "version": "2.1.5",
   "bugs": {
