--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,12 @@ before_script:
 after_script:
   - npm run coverage
   - npm run deploy;
+deploy:
+  provider: heroku
+  api_key:
+    secure: $HEROKU_API_KEY
+  app:
+    master: template-webapp-basic
+  skip_cleanup: true
 git:
   depth: 10
