--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "css-loader": "0.25.0",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "firebase-tools": "3.1.0",
     "fs-extra": "1.0.0",
     "html-webpack-plugin": "2.24.1",
     "istanbul-instrumenter-loader": "0.2.0",
@@ -55,7 +54,7 @@
     "webpack-hot-middleware": "2.13.1"
   },
   "engines": {
-    "node": ">=5.0.0"
+    "node": ">=6.9.1"
   },
   "homepage": "",
   "licenses": [],
@@ -82,8 +81,7 @@
     "test": "node scripts/test.js",
     "test-local-chrome": "node scripts/test.js local Chrome",
     "test-local-firefox": "node scripts/test.js local Firefox",
-    "test-e2e": "npm run test e2e",
-    "firebase":"firebase"
+    "test-e2e": "npm run test e2e"
   },
   "version": "2.1.5",
   "bugs": {
