--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ deploy:
   provider: heroku
   api_key:
     secure: $HEROKU_API_KEY
-  app:
-    master: template-webapp-basic
+  app: template-webapp-basic
   skip_cleanup: true
   on:
     tags: true
