--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
+
 language: node_js
+
 env:
   - NODE_ENV=CI
 node_js:
@@ -7,11 +9,17 @@ node_js:
   - "7.0.0"
 install:
   - npm run install-deps
+
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
+
 after_script:
   - npm run coverage
+
+before_deploy:
+  - npm run build-release
+
 deploy:
   provider: heroku
   api_key:
@@ -21,5 +29,6 @@ deploy:
   on:
     tags: true
     node: 6.9.1
+
 git:
   depth: 10
