--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,11 @@ deploy:
   provider: heroku
   api_key:
     secure: $HEROKU_API_KEY
-  app: template-webapp-basic
+  app:
+    production: template-webapp-basic
   skip_cleanup: true
   on:
-    tags: true
+    branch: production
     node: 6.9.1
 
 git:
