--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/core-js": "0.9.34",
     "@types/jasmine": "2.5.37",
     "@types/node": "6.0.46",
-    "@types/selenium-webdriver": "2.53.33",
+    "@types/selenium-webdriver": "2.53.35",
     "@types/whatwg-fetch": "0.0.32",
     "awesome-typescript-loader": "2.2.4",
-    "copy-webpack-plugin": "4.0.0",
-    "coveralls": "2.11.14",
-    "cross-spawn": "5.0.0",
+    "copy-webpack-plugin": "4.0.1",
+    "coveralls": "2.11.15",
+    "cross-env": "^3.1.3",
+    "cross-spawn": "5.0.1",
     "css-loader": "0.25.0",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
@@ -39,19 +40,19 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "minimist": "1.2.0",
-    "node-sass": "3.11.1",
+    "node-sass": "3.12.2",
     "phantomjs-prebuilt": "2.1.13",
-    "protractor": "4.0.10",
+    "protractor": "4.0.11",
     "protractor-jasmine2-html-reporter": "0.0.6",
     "raw-loader": "0.5.1",
     "sass-loader": "4.0.2",
     "style-loader": "0.13.1",
-    "ts-node": "1.6.1",
-    "typescript": "2.0.7",
+    "ts-node": "1.7.0",
+    "typescript": "2.0.9",
     "underscore-template-loader": "0.7.3",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "1.8.4",
-    "webpack-hot-middleware": "2.13.1"
+    "webpack-hot-middleware": "2.13.2"
   },
   "engines": {
     "node": ">=6.9.1"
@@ -66,21 +67,20 @@
     "type": ""
   },
   "scripts": {
+    "install-deps": "npm install && node scripts/install-other-dependencies.js",
+    "clean": "node scripts/clean.js",
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
-    "build-local": "node scripts/build.js local",
-    "build-release": "npm run build release",
-    "clean": "node scripts/clean.js",
-    "coverage": "node scripts/coverage.js",
-    "deploy": "node scripts/deploy.js",
-    "install-deps": "npm install && node scripts/install-other-dependencies.js",
+    "build-all":"cross-env NODE_ENV=build-all npm run build",
+    "build-release":"cross-env NODE_ENV=production npm run build",
+    "test": "cross-env NODE_ENV=test node scripts/test.js",
+    "test-chrome": "cross-env TEST_BROWSER=Chrome node scripts/test.js",
+    "test-firefox": "cross-env TEST_BROWSER=Firefox node scripts/test.js",
+    "test-e2e": "cross-env TEST_E2E=true npm run test",
     "release-major": "node scripts/release.js major",
     "release-minor": "node scripts/release.js minor",
     "release-patch": "node scripts/release.js patch",
-    "test": "node scripts/test.js",
-    "test-local-chrome": "node scripts/test.js local Chrome",
-    "test-local-firefox": "node scripts/test.js local Firefox",
-    "test-e2e": "npm run test e2e"
+    "report-coverage": "node scripts/report-coverage.js"
   },
   "version": "2.1.13",
   "bugs": {
