making changes to release script

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "karma-remap-coverage": "0.1.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
-    "minimist": "1.2.0",
     "node-sass": "3.13.0",
     "phantomjs-prebuilt": "2.1.13",
     "protractor": "4.0.11",
@@ -77,9 +76,9 @@
     "test-chrome": "cross-env TEST_BROWSER=Chrome node scripts/test.js",
     "test-firefox": "cross-env TEST_BROWSER=Firefox node scripts/test.js",
     "test-e2e": "cross-env TEST_E2E=true npm run test",
-    "release-major": "node scripts/release.js major",
-    "release-minor": "node scripts/release.js minor",
-    "release-patch": "node scripts/release.js patch",
+    "release-major": "cross-env RELEASE_TYPE=major node scripts/release.js",
+    "release-minor": "cross-env RELEASE_TYPE=minor node scripts/release.js",
+    "release-patch": "cross-env RELEASE_TYPE=patch node scripts/release.js",
     "report-coverage": "node scripts/report-coverage.js"
   },
   "version": "2.2.5",
