--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 .DS_STORE
 src/**/*.js
 src/**/*.css
-test/**/*.js
+tests/**/*.js
 !src/**/libs/**/*
 !src/client/assets/fonts/**/*.css
 **/*.map
