upgrading to typescript and adding linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators":true,
     "skipLibCheck":true,
     "noEmitOnError":true,
+    "lib": ["es5","es6","dom","scripthost"],
     "moduleResolution":"node"
   },
   "exclude": [
