--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
     "whatwg-fetch": "2.0.1"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.46",
-    "@types/selenium-webdriver": "2.53.35",
+    "@types/selenium-webdriver": "2.53.36",
     "@types/whatwg-fetch": "0.0.32",
     "awesome-typescript-loader": "2.2.4",
     "copy-webpack-plugin": "4.0.1",
     "coveralls": "2.11.15",
     "cross-env": "^3.1.3",
     "cross-spawn": "5.0.1",
-    "css-loader": "0.26.0",
+    "css-loader": "0.26.1",
     "del": "2.2.2",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "fs-extra": "1.0.0",
@@ -32,24 +31,25 @@
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.0",
-    "karma-jasmine": "1.0.2",
+    "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-mocha-reporter": "2.2.1",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
-    "node-sass": "3.13.0",
-    "phantomjs-prebuilt": "2.1.13",
-    "protractor": "4.0.11",
+    "node-sass": "4.0.0",
+    "phantomjs-prebuilt": "2.1.14",
+    "protractor": "4.0.13",
     "protractor-jasmine2-html-reporter": "0.0.6",
     "raw-loader": "0.5.1",
     "sass-loader": "4.0.2",
     "style-loader": "0.13.1",
-    "ts-node": "1.7.0",
-    "typescript": "2.0.10",
+    "ts-node": "1.7.2",
+    "tslint": "4.0.2",
+    "typescript": "2.1.1",
     "underscore-template-loader": "0.7.3",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "2.1.0-beta.27",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.2"
   },
@@ -70,12 +70,13 @@
     "clean": "node scripts/clean.js",
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
-    "build-all": "cross-env NODE_ENV=build-all npm run build",
+    "build-all": "npm run lint && cross-env NODE_ENV=build-all npm run build",
     "build-release": "cross-env NODE_ENV=production npm run build",
-    "test": "cross-env NODE_ENV=test node scripts/test.js",
-    "test-chrome": "cross-env TEST_BROWSER=Chrome node scripts/test.js",
-    "test-firefox": "cross-env TEST_BROWSER=Firefox node scripts/test.js",
-    "test-e2e": "cross-env TEST_E2E=true npm run test",
+    "lint": "tslint --project ./tsconfig.json",
+    "test": "npm run lint && cross-env NODE_ENV=test node scripts/test.js",
+    "test-chrome": " npm run lint && cross-env TEST_BROWSER=Chrome node scripts/test.js",
+    "test-firefox": "npm run lint && cross-env TEST_BROWSER=Firefox node scripts/test.js",
+    "test-e2e": "npm run lint && cross-env TEST_E2E=true npm run test",
     "release-major": "cross-env RELEASE_TYPE=major node scripts/release.js",
     "release-minor": "cross-env RELEASE_TYPE=minor node scripts/release.js",
     "release-patch": "cross-env RELEASE_TYPE=patch node scripts/release.js",
