updating template design -- inital commit

--- a/package.json
+++ b/package.json
@@ -6,56 +6,58 @@
   },
   "dependencies": {
     "core-js": "2.4.1",
-    "store2": "2.3.2",
-    "express": "4.14.0",
-    "whatwg-fetch": "2.0.1"
+    "express": "4.15.3",
+    "proxy-polyfill": "^0.1.7",
+    "rxjs": "^5.4.1",
+    "store2": "2.5.1",
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.46",
-    "@types/selenium-webdriver": "2.53.36",
-    "@types/whatwg-fetch": "0.0.32",
-    "awesome-typescript-loader": "2.2.4",
+    "@types/jasmine": "2.5.52",
+    "@types/node": "8.0.1",
+    "@types/selenium-webdriver": "3.0.4",
+    "@types/whatwg-fetch": "0.0.33",
+    "awesome-typescript-loader": "3.1.3",
     "copy-webpack-plugin": "4.0.1",
-    "coveralls": "2.11.15",
-    "cross-env": "^3.1.3",
-    "cross-spawn": "5.0.1",
-    "css-loader": "0.26.1",
-    "del": "2.2.2",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "fs-extra": "1.0.0",
-    "html-webpack-plugin": "2.24.1",
-    "istanbul-instrumenter-loader": "0.2.0",
-    "jasmine": "2.5.2",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
+    "coveralls": "2.13.1",
+    "cross-env": "5.0.1",
+    "cross-spawn": "5.1.0",
+    "css-loader": "0.28.4",
+    "del": "3.0.0",
+    "extract-text-webpack-plugin": "2.1.2",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.28.0",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jasmine": "2.6.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
     "karma-coverage": "1.1.1",
-    "karma-firefox-launcher": "1.0.0",
+    "karma-firefox-launcher": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-mocha-reporter": "2.2.1",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-remap-coverage": "0.1.2",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-remap-coverage": "0.1.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
-    "node-sass": "4.0.0",
+    "karma-webpack": "2.0.3",
+    "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.14",
-    "protractor": "4.0.13",
-    "protractor-jasmine2-html-reporter": "0.0.6",
+    "protractor": "5.1.2",
+    "protractor-jasmine2-html-reporter": "0.0.7",
     "raw-loader": "0.5.1",
-    "sass-loader": "4.0.2",
-    "style-loader": "0.13.1",
-    "ts-node": "1.7.2",
-    "tslint": "4.0.2",
-    "typedoc": "^0.5.1",
-    "typescript": "2.1.1",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "ts-node": "3.1.0",
+    "tslint": "5.4.3",
+    "typedoc": "^0.7.1",
+    "typescript": "2.3.4",
     "underscore-template-loader": "0.7.3",
-    "webpack": "2.1.0-beta.27",
-    "webpack-dev-middleware": "1.8.4",
-    "webpack-hot-middleware": "2.13.2"
+    "webpack": "3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "2.18.0"
   },
   "engines": {
-    "node": ">=6.9.1"
+    "node": ">=8.0.0"
   },
   "homepage": "",
   "licenses": [],
@@ -71,13 +73,13 @@
     "clean": "node scripts/clean.js",
     "develop": "node scripts/develop.js",
     "build": "node scripts/build.js",
-    "build-all": "npm run lint && cross-env NODE_ENV=build-all npm run build",
+    "build-all": "cross-env NODE_ENV=build-all npm run build",
     "build-release": "cross-env NODE_ENV=production npm run build",
     "lint": "tslint --project ./tsconfig.json",
-    "test": "npm run lint && cross-env NODE_ENV=test node scripts/test.js",
-    "test-chrome": " npm run lint && cross-env TEST_BROWSER=Chrome node scripts/test.js",
-    "test-firefox": "npm run lint && cross-env TEST_BROWSER=Firefox node scripts/test.js",
-    "test-e2e": "npm run lint && cross-env TEST_E2E=true npm run test",
+    "test": "cross-env NODE_ENV=test node scripts/test.js",
+    "test-chrome": "cross-env TEST_BROWSER=Chrome node scripts/test.js",
+    "test-firefox": "cross-env TEST_BROWSER=Firefox node scripts/test.js",
+    "test-e2e": "cross-env TEST_E2E=true npm run test",
     "release-major": "cross-env RELEASE_TYPE=major node scripts/release.js",
     "release-minor": "cross-env RELEASE_TYPE=minor node scripts/release.js",
     "release-patch": "cross-env RELEASE_TYPE=patch node scripts/release.js",
